<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>HexapodeJavaApi</groupId>
  <artifactId>HexapodeJavaApi</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          
        </configuration>
        
      </plugin>
      
    </plugins>
    
  </build>
  
  <dependencies>
  	<dependency>
  		<groupId>com.pi4j</groupId>
  		<artifactId>pi4j-core</artifactId>
  		<version>1.3-SNAPSHOT</version>
  	</dependency>
  </dependencies>
</project>